--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Holiness Kerandi</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Holiness Kerandi</title>
+    <link rel="stylesheet" href="home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 </head>
 
-<body class="landing">
-  <!-- Big Netflix-like title -->
-  <div class="intro">Who's Watching?</div>
+<body>
 
-  <!-- Persona cards (now clickable links) -->
-  <div class="personas">
-    <a href="corporate.html" class = "card corporate">
-      <img src="img/avatars/corprateBaddie_front.png" alt="Corporate Baddie">
-      <h3>Corporate Baddie</h3>
-      <p>Poised. Powerful. Multi-skilled.</p>
-    </a>
-  
+    <section class="hero">
 
-    <a href="auntie.html" class = "card auntie">
-      <img src="img/avatars/tantine_front.png" alt="Rich Auntie">
-      <h3>Rich Auntie</h3>
-      <p>Luxury meets storytelling & XR.</p>
-    </a>
+        <!-- COMIC STRIP HERO -->
+        <img class="comic-strip" src="img/hero_comic.png" alt="My Journey Comic">
 
-    <a href="data.html" class = "card data">
-      <img src="img/avatars/data_front.png" alt="Data Diva">
-      <h3>Data Diva</h3>
-      <p>Knows the numbers. Owns the room.</p>
-    </a>
-  
-  </div>
+        <!-- INTRO -->
+        <h1>Hi, I’m Holiness 👋🏾</h1>
+        <p class="intro-text">
+            Creative technologist exploring how culture, behavior,<br>
+            and engineering shape the world.
+        </p>
+
+        <!-- MAIN CTA -->
+        <a href="personna.html" class="cta">Explore My Worlds →</a>
+
+        <!-- FOOTER SOCIALS -->
+        <footer>
+            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+            <a href="https://github.com" target="_blank">GitHub</a>
+            <a href="mailto:your-email@example.com">Email</a>
+        </footer>
+
+    </section>
+
 </body>
 </html>
 
