--- a/webXR/auntie.html
+++ b/webXR/auntie.html
@@ -13,15 +13,13 @@
     <div class="container">
 
         <header class="hero">
-            <img src="rich-auntie-avatar.png" class="avatar">
+            <img src="img/auntie.png" class="avatar">
             <h1>Having fun with Tech</h1>
             <p class="tagline"> Vibes and Inshallah 🌍✨</p>
 
             <nav>
-                <a href="journal.html" class="nav-btn">📝 Journal</a>
-                <a href="apps.html" class="nav-btn">📱 Apps</a>
                 <a href="playlist.html" class="nav-btn">🎶 Playlist</a>
-                <a href="corporate.html" class="nav-btn back">↩ Back to Corporate</a>
+                <a href="personna.html" class="nav-btn back">↩ Back to personnas </a>
             </nav>
         </header>
 
@@ -30,32 +28,16 @@
             <h2>XR Playground (Under Construction)</h2>
             <p>Welcome to my future world — an immersive XR experience blending travel, storytelling, African futurism, and spatial design.  
             Think: a digital sanctuary where culture, memory, and movement collide.</p>
-            <p class="note">This space is growing. Come back soon ✨ In the meantime enjoy this one (TravelGuide)</p>
+            <p class="note">This space is growing. Come back soon ✨ In the meantime enjoy it's first version (TravelGuide)</p>
         </section>
 
         <section class="section">
             <h2>Health and Wellness </h2>
            <p>Everybody like to be taken care of and understood, here are some few creations that attempt to mirror this.</p>
-            <img src="mapconcept.png" class="wide-img">
+            <img src="img/todo.png" class="wide-img">
+            <p class="note">This space is also under construction...</p>
+
         </section>
-
-	    <h2>Money </h2>
-           <p>Everybody like to be taken care of and understood, here are some few creations that attempt to mirror this.</p>
-            <img src="mapconcept.png" class="wide-img">
-	<p class="note"> Coming soon... this is for my babes in the diaspora </p>
-        </section>
-
-	 <section class="section">
-            <h2>Fun creations</h2>
-            <p>Where my imagination meets the world — a collection of digital art, UI sketches, travel memories, and experiments in color & light.</p>
-            <div class="gallery">
-                <img src="soft1.png">
-                <img src="soft2.png">
-                <img src="soft3.png">
-            </div>
-        </section>
-
-
 
     </div>
 
