Fixing a few more things

--- a/data.html
+++ b/data.html
@@ -46,7 +46,7 @@ window.onclick = function(event) {
 
         <div class="top-actions">
             <a href="personna.html" class="btn secondary">Back to Personas</a>
-            <a href="Holiness_Kerandi_Resume.pdf" class="btn resume">Resume</a>
+            <a href="img/dataResume.pdf" class="btn resume">Resume</a>
         </div>
     </header>
 
@@ -77,6 +77,20 @@ window.onclick = function(event) {
             </div>
         </div>
 
+        <!-- PROJECT CARD — Scotland Slavery Legacies -->
+        <div class="card" onclick="openModal('scotlandModal')">
+            <img src="img/scotland.jpeg" class="card-img">
+            <div class="card-content">
+                <h3>Scotland Slavery Legacies </h3>
+                <p class="small">
+                    A prototype on consolidating data by the Scotland Slavery Legacies Project
+                </p>
+                <div class="tags">
+                    <span class="visual">Data Storytelling</span>
+                    <span class="ethics">Cultural Insight</span>
+                </div>
+            </div>
+        </div>
 
 
         <!-- PROJECT CARD — Spotify Hot 100 -->
@@ -94,26 +108,8 @@ window.onclick = function(event) {
                     <span class="ethics">Cultural Insight</span>
                 </div>
             </div>
-        </div>
-        </section>
-
-
-        <!-- PROJECT CARD — Scotland Slavery Legacies -->
-        <div class="card" onclick="openModal('scotlandModal')">
-            <img src="img/scotland.jpeg" class="card-img">
-            <div class="card-content">
-                <h3>Scotland Slavery Legacies </h3>
-                <p class="small">
-                    A prototype on consolidating data by the Scotland Slavery Legacies Project
-                </p>
-                <div class="tags">
-                    <span class="visual">Data Storytelling</span>
-                    <span class="ethics">Cultural Insight</span>
-                </div>
-            </div>
-        </div>
-        </section>
-
+        </div>    
+    </section>
 
 
     <!-- MODAL TEMPLATE — CARCERAL -->
@@ -139,7 +135,8 @@ window.onclick = function(event) {
             <h3>Key Findings</h3>
             <p>Clear disparities existed between demographic groups, with inflated risk predictions in specific populations.</p>
 
-            <a href="carceral_notebook.html" class="modal-link">View Notebook →</a>
+
+            <a href="img/summer2023P.pdf" class="modal-link">View Poster→</a>
         </div>
     </div>
 
@@ -183,7 +180,8 @@ window.onclick = function(event) {
                 content intelligence.
             </p>
 
-            <a href="DataHot100.html" class="modal-link" target="_blank">View Notebook →</a>
+            <a href="https://nbviewer.org/github/hkerandi/dataChallenge/blob/main/DataHot100.ipynb
+" class="modal-link" target="_blank">View Notebook →</a>
         </div>
     </div>
 
@@ -197,8 +195,12 @@ window.onclick = function(event) {
 
             <h3>Why It Matters</h3>
             <p>
-              Many people move through places without truly knowing their historical significance. Others pass through the same spaces and feel something: an unspoken sense that something happened there, whether the experience was good or bad.
-              Scotland has chosen to confront the skeletons in her closet by educating her population about the role she played in slavery and colonialism. This project marked my introduction to storytelling from a data-driven perspective.
+              Many people move through places without truly knowing their historical significance. 
+              
+              Others pass through the same spaces and feel something: an unspoken sense that something happened there, whether the experience was good or bad.
+              Scotland has chosen to confront the skeletons in her closet by educating her population about the role she played in slavery and colonialism. 
+              
+              This project marked my introduction to storytelling from a data-driven perspective.
               This is sensitive information, particularly because there are still living populations affected by the legacy of slavery and colonialism. For that reason, I worked alongside a team to present the data in a way that avoids retraumatization or placing blame on the descendants of either party. Instead, the goal was to provide historical context—what happened at the time, and how those events continue to shape society today.
               As my professor often says, “History is now.”
 
