--- a/index.html
+++ b/index.html
@@ -17,19 +17,48 @@
 
         <!-- INTRO -->
         <h1>Hi, I’m Holiness 👋🏾</h1>
+        <h2>Full-Stack Developer & Data-Driven Engineer</h2>
         <p class="intro-text">
-            Creative technologist exploring how culture, behavior,<br>
-            and engineering shape the world.
+            I build data-backed web applications that turn messy real-world data
+            into usable tools and insights.
         </p>
+
+        <h2>My tech stack:</h2>
+        <p>React · JavaScript · Python · SQL · Java · Pandas · Git</p>
+
+        <!-- 🔥 FEATURED PROJECT (NEW, IMPORTANT) -->
+        <section class="featured-project">
+            <h3>Featured Project</h3>
+
+            <div class="project-card">
+                <h4>Carceral Data Platform</h4>
+                <p class="project-tagline">
+                    A full-stack data platform for exploring incarceration patterns
+                </p>
+
+                <ul>
+                    <li>Designed SQL schema and ETL pipelines for multi-source public data</li>
+                    <li>Built a React + ArcGIS interface for spatial analysis</li>
+                    <li>Analyzed 10,000+ records uncovering a 3× racial disparity</li>
+                </ul>
+
+                <p class="project-tech">
+                    <strong>Tech:</strong> Python, SQL, React, Pandas, ArcGIS
+                </p>
+
+    
+            </div>
+        </section>
+
 
         <!-- MAIN CTA -->
         <a href="personna.html" class="cta">Explore My Worlds →</a>
 
         <!-- FOOTER SOCIALS -->
         <footer>
-            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-            <a href="https://github.com" target="_blank">GitHub</a>
-            <a href="mailto:your-email@example.com">Email</a>
+            <a href="https://www.linkedin.com/in/holiness-kerandi-20b170250/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/hkerandi" target="_blank">GitHub</a>
+            <a href="mailto:holinesskerandi@gmail.com">Email</a>
         </footer>
 
     </section>
