--- a/webXR/auntie.html
+++ b/webXR/auntie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keza's World | Rich Auntie</title>
+    <title>Rich Auntie</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -28,7 +28,9 @@
             <h2>XR Playground (Under Construction)</h2>
             <p>Welcome to my future world — an immersive XR experience blending travel, storytelling, African futurism, and spatial design.  
             Think: a digital sanctuary where culture, memory, and movement collide.</p>
-            <p class="note">This space is growing. Come back soon ✨ In the meantime enjoy it's first version (TravelGuide)</p>
+            <p class="note">This space is growing. Come back soon ✨ In the meantime enjoy it's first edition (TravelGuide)</p>
+            <img src="img/travel.png" class="wide-img">
+
         </section>
 
         <section class="section">
