--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holiness Kerandi</title>
     <link rel="stylesheet" href="home.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,40 +19,16 @@
         <h1>Hi, I’m Holiness 👋🏾</h1>
         <h2>Full-Stack Developer & Data-Driven Engineer</h2>
         <p class="intro-text">
-            I build data-backed web applications that turn messy real-world data
+            I build data-backed applications that turn messy real-world data
             into usable tools and insights.
         </p>
 
         <h2>My tech stack:</h2>
         <p>React · JavaScript · Python · SQL · Java · Pandas · Git</p>
 
-        <!-- 🔥 FEATURED PROJECT (NEW, IMPORTANT) -->
-        <section class="featured-project">
-            <h3>Featured Project</h3>
-
-            <div class="project-card">
-                <h4>Carceral Data Platform</h4>
-                <p class="project-tagline">
-                    A full-stack data platform for exploring incarceration patterns
-                </p>
-
-                <ul>
-                    <li>Designed SQL schema and ETL pipelines for multi-source public data</li>
-                    <li>Built a React + ArcGIS interface for spatial analysis</li>
-                    <li>Analyzed 10,000+ records uncovering a 3× racial disparity</li>
-                </ul>
-
-                <p class="project-tech">
-                    <strong>Tech:</strong> Python, SQL, React, Pandas, ArcGIS
-                </p>
-
-    
-            </div>
-        </section>
-
-
+        <p> Projects, personas, and the thinking behind the code.</p>
         <!-- MAIN CTA -->
-        <a href="personna.html" class="cta">Explore My Worlds →</a>
+        <a href="personna.html" class="cta"> Explore my worlds →</a>
 
         <!-- FOOTER SOCIALS -->
         <footer>
