Polishing data and homepage

--- a/data.html
+++ b/data.html
@@ -45,29 +45,21 @@ window.onclick = function(event) {
         <p class="subtitle">Where human stories meet computational insight.</p>
 
         <div class="top-actions">
-            <a href="personna.html" class="btn secondary">Back to Personas</a>
-            <a href="img/dataResume.pdf" class="btn resume">Resume</a>
+            <a href="img/DataEngineering Resume.pdf" class="btn resume">Resume</a>
         </div>
     </header>
 
     <!-- SEARCH + FILTERS -->
-    <section class="search-section">
+    <!-- <section class="search-section">
         <input type="text" class="search-bar" placeholder="Search projects, tech, narratives…">
-
-        <select class="filter">
-            <option value="all">All</option>
-            <option value="notebook">Notebook Available</option>
-            <option value="ethics">Ethical Case Study</option>
-            <option value="visual">Data Storytelling</option>
-        </select>
-    </section>
+    </section> -->
 
     <!-- PROJECT GRID -->
     <section class="grid">
 
         <!-- PROJECT CARD 1 -->
         <div class="card" onclick="openModal('carceralModal')">
-            <img src="img/carceral.png" class="card-img">
+            <img src="img/carceral.jpeg" class="card-img">
             <div class="card-content">
                 <h3>Carceral Algorithms Research</h3>
                 <p class="small">Explored racial bias in parole recommendations; presented at academic symposia.</p>
@@ -95,7 +87,7 @@ window.onclick = function(event) {
 
         <!-- PROJECT CARD — Spotify Hot 100 -->
         <div class="card" onclick="openModal('spotifyModal')">
-            <img src="img/hot100.png" class="card-img">
+            <img src="img/music.jpeg" class="card-img">
             <div class="card-content">
                 <h3>Spotify Hot 100: Emotional Trends</h3>
                 <p class="small">
