--- a/personna.html
+++ b/personna.html
@@ -11,7 +11,7 @@
 
 <body class="landing">
   <!-- Big Netflix-like title -->
-  <div class="intro">Who's Watching?</div>
+  <div class="intro">The Lenses I Build Through</div>
 
   <!-- Persona cards (now clickable links) -->
   <div class="personas">
