--- a/index.html
+++ b/index.html
@@ -87,26 +87,24 @@
             <p>Projects, personas, and the thinking behind the code</p>
         </div>
 
-        <div class="personas">
-            <a href="corporate.html" class="card corporate">
+        <div class="personas"> 
+            <!-- <a href="corporate.html" class="card corporate">
                 <img src="img/avatars/corprateBaddie_front.png" alt="Corporate Baddie">
                 <h3>Corporate Baddie</h3>
                 <p>Poised. Powerful. Multi-skilled.</p>
                 <span class="card-link">Full-Stack Systems →</span>
-            </a>
+            </a>  -->
 
             <a href="webXR/auntie.html" class="card auntie">
-                <img src="img/avatars/tantine_front.png" alt="Rich Auntie">
-                <h3>Rich Auntie</h3>
-                <p>Luxury meets storytelling & XR.</p>
-                <span class="card-link">Creative Tech →</span>
+                <img src="img/avatars/tantine_front.png">
+                <p>soft tech • playful builds • digital care ☁️</p>
+                <span class="card-link"> ✨ Creative Tech →</span>
             </a>
 
             <a href="data.html" class="card data">
-                <img src="img/avatars/data_front.png" alt="Data Diva">
-                <h3>Data Diva</h3>
-                <p>Knows the numbers. Owns the room.</p>
-                <span class="card-link">Analytics & Pipelines →</span>
+                <img src="img/avatars/data_front.png" >
+                <p> Systems, Pipelines & Impact </p>
+                <span class="card-link"> ⚙️ Engineering projects →</span>
             </a>
         </div>
     </section>
