--- a/webXR/auntie.html
+++ b/webXR/auntie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rich Auntie</title>
+    <title>Creati</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -13,33 +13,50 @@
     <div class="container">
 
         <header class="hero">
-            <img src="img/auntie.png" class="avatar">
-            <h1>Having fun with Tech</h1>
-            <p class="tagline"> Vibes and Inshallah 🌍✨</p>
+            <img src="img/auntie.png" class="hero-phone">
+            <div class="hero-text">
 
-            <nav>
-                <a href="playlist.html" class="nav-btn">🎶 Playlist</a>
-                <a href="personna.html" class="nav-btn back">↩ Back to personnas </a>
-            </nav>
+            <p class="eyebrow">✨ Creative side quests ✨</p>
+            <div class="hero-divider"></div>
+        
+            <p class="intro">
+                Hi, welcome to the soft corner of my world 🌸<br><br>
+
+                Over in Data Engineering, I build systems that scale.<br>
+                Here? I build things that make me smile.<br><br>
+
+                Pull up a chair. Stay a while ☕
+                </p>
+
+            <p class="scroll">[ scroll to explore ↓ ]</p>
+            </div>
+
         </header>
 
-
         <section class="section">
-            <h2>XR Playground (Under Construction)</h2>
-            <p>Welcome to my future world — an immersive XR experience blending travel, storytelling, African futurism, and spatial design.  
-            Think: a digital sanctuary where culture, memory, and movement collide.</p>
-            <p class="note">This space is growing. Come back soon ✨ In the meantime enjoy it's first edition (TravelGuide)</p>
+            <h2>Diaspora Diaries (Under Construction)</h2>
+            <p>An Afrofuturist travel diary that's part memory, part imagination, part sanctuary.</p>
+            <p class="note">I'm building this slowly - learning WebXR, exploring spatial storytelling, and discovering what it means to hold culture and movement in digital space.
+                <br> Version 1: Complete ✓ </br>
+                Version 2: Growing 🌱
+            </p>
             <img src="img/travel.png" class="wide-img">
 
         </section>
 
-        <section class="section">
-            <h2>Health and Wellness </h2>
-           <p>Everybody like to be taken care of and understood, here are some few creations that attempt to mirror this.</p>
-            <img src="img/todo.png" class="wide-img">
-            <p class="note">This space is also under construction...</p>
+         <section class="section">
+            <h2>Tools that hold you</h2>
+            <p>Tools That Hold You is a collection of gentle software experiments centered on care, reflection, and emotional awareness. 
+                These tools are designed to support people in small, everyday moments—helping them notice, check in, and care for themselves before support becomes urgent. 
+                By prioritizing rest over optimization, this work explores what self-care can look like when expressed through thoughtful, human-centered code.</p>
+        
+            </p>
+            <!-- <img src="img/travel.png" class="wide-img"> -->
 
         </section>
+
+
+
 
     </div>
 
