I am happy with this

--- a/data.html
+++ b/data.html
@@ -70,16 +70,20 @@ window.onclick = function(event) {
             </div>
         </div>
 
-        <div class="card" onclick="openModal('frenzyModal')">
-        <img src="img/frenzy.png" class="card-img">
-        <div class="card-content" ></div>
-           <h3>Key frenzy </h3> 
-           <p> Key Frenzy reimagines the classic arcade chase as a typing challenge.</p>
-            <div class="tags">
-                    <span>Java</span><span>Agile</span></span>
+        <!-- PROJECT CARD — Key frenzy -->
+       <div class="card" onclick="openModal('keyFrenzyModal')">
+            <img src="img/frenzy.png" class="card-img">
+            <div class="card-content">
+                <h3>Key Frenzy</h3>
+                <p>Key Frenzy reimagines the classic arcade chase as a typing challenge.</p>
+                <div class="tags">
+                    <span>Java</span>
+                    <span>Agile</span>
                 </div>
             </div>
         </div>
+
+
 
     
         <!-- PROJECT CARD — Scotland Slavery Legacies -->
@@ -113,7 +117,8 @@ window.onclick = function(event) {
                     <span class="ethics">Cultural Insight</span>
                 </div>
             </div>
-        </div>    
+        </div>   
+
     </section>
 
 
@@ -191,33 +196,33 @@ window.onclick = function(event) {
     </div>
 
     <!-- MODAL TEMPLATE — KEY FRENZY -->
-<div id="keyFrenzyModal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal('keyFrenzyModal')">&times;</span>
-        <h2>Key Frenzy</h2>
-        <p class="modal-sub">Interactive game design & playful systems</p>
+    <div id="keyFrenzyModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('keyFrenzyModal')">&times;</span>
+            <h2>Key Frenzy</h2>
+            <p class="modal-sub">Interactive game design & playful systems</p>
 
-        <p>
-            Key Frenzy is a reverse Pac-Man–style typing game that transforms keyboard input into a fast-paced survival challenge.  
-            Players type quickly and accurately to keep advancing ghosts at bay, turning familiar typing mechanics into an experience shaped by rhythm, focus, and pressure.
-        </p>
+            <p>
+                Key Frenzy is a reverse Pac-Man–style typing game that transforms keyboard input into a fast-paced survival challenge.  
+                Players type quickly and accurately to keep advancing ghosts at bay, turning familiar typing mechanics into an experience shaped by rhythm, focus, and pressure.
+            </p>
 
-        <h3>Design Focus</h3>
-        <ul>
-            <li>Real-time keyboard interaction and responsive feedback</li>
-            <li>Balancing challenge and accessibility through pacing</li>
-            <li>Playful tension without punitive failure states</li>
-            <li>Game feel shaped by timing, sound, and visual cues</li>
-        </ul>
+            <h3>Design Focus</h3>
+            <ul>
+                <li>Real-time keyboard interaction and responsive feedback</li>
+                <li>Balancing challenge and accessibility through pacing</li>
+                <li>Playful tension without punitive failure states</li>
+                <li>Game feel shaped by timing, sound, and visual cues</li>
+            </ul>
 
-        <h3>What This Explores</h3>
-        <p>
-            This project explores how simple mechanics can create engagement and flow, and how play can be used as a space for experimentation, focus, and enjoyment within technical systems.
-        </p>
+            <h3>What This Explores</h3>
+            <p>
+                This project explores how simple mechanics can create engagement and flow, and how play can be used as a space for experimentation, focus, and enjoyment within technical systems.
+            </p>
 
-        <a href="" class="modal-link"> Game Demo →</a>
+            <a href="" class="modal-link"> Game Demo →</a>
+        </div>
     </div>
-</div>
 
 
     <!-- MODAL TEMPLATE — SCOTLAND -->
