--- a/webXR/auntie.html
+++ b/webXR/auntie.html
@@ -6,6 +6,8 @@
     <title>Creati</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -25,14 +27,14 @@
     <section class="hero">
         <span class="hero-emoji">✨</span>
         <h1>My Creative Playground</h1>
-        <p class="hero-subtitle">where tech meets joy & tenderness</p>
+        <p class="hero-subtitle"> Having fun with WebXR and creative coding</p>
         <p class="hero-description">
             This is where I build for myself - exploring technology as a form 
             of care, creativity, and healing. Wellness tools, immersive experiences, 
             and experiments.
         </p>
         <p class="hero-note">
-            No deadlines. No metrics. Just vibes and curiosity ☁️
+            JUST VIBES AND CURIOSITY ☁️
         </p>
     </section>
 
@@ -47,14 +49,14 @@
 
         <div class="project-grid">
 
-            <!-- Project 1: TravelGuide -->
+            <!-- Project 1: Routes and Rhythms -->
             <div class="project-card">
                 <span class="project-icon">🌍</span>
                 <span class="project-status">Version 1: Complete ✓</span>
                 <h3>Routes and Rhythms </h3>
                 <p class="project-description">
                     An Afrofuturist digital archive that's part memory, 
-                    part imagination, part sanctuary. Exploring place, culture, 
+                    part imagination, part sanctuary. Exploring place, sound, culture, 
                     and movement through immersive WebXR storytelling.
                 </p>
                 <p class="project-description">
@@ -62,42 +64,33 @@
                     memories and dreams, not just locations.
                 </p>
                 <p class="project-note">
-                    Version 2 is growing slowly, learning WebXR as I go 🌱
+                    VERSION 2: IN THE WORKS! EXPLORING WEBXR. 🌱
+                
                 </p>
-                <a href="#" class="project-link">Explore TravelGuide →</a>
+                <!-- <a href="#" class="project-link">Explore Routes and Rhythms →</a> -->
             </div>
 
             <!-- Project 2: Wellness Tools -->
             <div class="project-card">
                 <span class="project-icon">🧘🏾‍♀️</span>
                 <span class="project-status">Exploring & Prototyping</span>
-                <h3>Tools That Hold You</h3>
+                <h3>Naskia Sijui Aje</h3>
                 <p class="project-description">
-                    Habit trackers that feel like friends. Mood boards that 
-                    honor your feelings. Spaces designed for gentle healing.
+                    A culturally-centered health tool for Black and African women 
+                    to track symptoms, access community wisdom, and advocate for 
+                    themselves in medical settings.
+
+                    THE VISION:
+                        Healthcare often dismisses Black women's symptoms - taking 
+                        years to diagnose conditions like endometriosis while telling 
+                        us it's "just stress." Naskia sijui aje centers our bodies, our 
+                        experiences, and generational wisdom.
+
                 </p>
                 
                 <p class="project-note">
-                    Asking: How can software support rest instead of productivity? 💛
+                    THE BODY ALWAYS KNOWS 💛
                 </p>
-            </div>
-
-            <!-- Project 3: Sonic Experiences -->
-            <div class="project-card">
-                <span class="project-icon">🎶</span>
-                <span class="project-status">Concept Phase</span>
-                <h3>Sounds That Move You</h3>
-                <p class="project-description">
-                    Playlists as storytelling. Music as memory. Audio as atmosphere.
-                </p>
-                <p class="project-description">
-                    Experimenting with how sound shapes mood, meaning, and 
-                    the spaces we inhabit - both physical and digital.
-                </p>
-                <p class="project-note">
-                    Music has always been my companion. This is my love letter to sound ✨
-                </p>
-                <a href="#" class="project-link">Listen while you browse →</a>
             </div>
 
         </div>
