Fixing tiny error

--- a/data.html
+++ b/data.html
@@ -161,7 +161,7 @@ window.onclick = function(event) {
 
             <p>
                 This project explores emotional and lyrical trends in North American Hot 100 chart-toppers 
-                (2010–2024). Using sentiment analysis, theme clustering, and frequency modeling, 
+                (1950-1990). Using sentiment analysis, theme clustering, and frequency modeling, 
                 I examined how mainstream music reflects shifting cultural moods.
             </p>
 
